--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,7 @@ version = "0.1.0-wip"
 edition = "2024"
 
 [dependencies]
-smithay-client-toolkit = { version = "0.20.0", default-features = false }
 wayland-client = "0.31.11"
+smithay-client-toolkit = { version = "0.20.0", default-features = false }
+image = "0.25.8"
+fast_image_resize = { version = "5.3.0", features = ["image"] }
