--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ wayland-client = "0.31.11"
 smithay-client-toolkit = { version = "0.20.0", default-features = false }
 image = "0.25.8"
 fast_image_resize = { version = "5.3.0", features = ["image"] }
+clap = { version = "4.5.47", features = ["derive"] }
