Add crate metadata

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "simplewall"
+description = "Simple wallpaper utility for Wayland compositors with layer shell support"
 version = "0.1.0-wip"
 edition = "2024"
+authors = ["David Wolff"]
+repository = "https://github.com/dav-wolff/simplewall"
 
 [dependencies]
 wayland-client = "0.31.11"
